Simple widgets init commit

--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -112,6 +112,7 @@
         <item name="dashboard_button">@drawable/dashboard_button_light</item>
         <item name="activity_background_color">@color/activity_background_color_light</item>
         <item name="list_background_color">@color/list_background_color_light</item>
+        <item name="simple_widget_background_color">@color/widget_background_color_light</item>
         <item name="ctx_menu_controller_bg">@drawable/context_menu_controller_bg_light</item>
         <item name="ctx_menu_controller_text_color">@drawable/context_menu_controller_text_color_light</item>
         <item name="ctx_menu_divider">@color/divider_color_light</item>
@@ -453,6 +454,7 @@
         <item name="dashboard_button">@drawable/dashboard_button_dark</item>
         <item name="activity_background_color">@color/activity_background_color_dark</item>
         <item name="list_background_color">@color/list_background_color_dark</item>
+        <item name="simple_widget_background_color">@color/widget_background_color_dark</item>
         <item name="ctx_menu_controller_bg">@drawable/context_menu_controller_bg_dark</item>
         <item name="ctx_menu_controller_text_color">@drawable/context_menu_controller_text_color_dark</item>
         <item name="ctx_menu_divider">@color/divider_color_dark</item>
