--- a/OsmAnd/res/values/attrs.xml
+++ b/OsmAnd/res/values/attrs.xml
@@ -41,6 +41,7 @@
         <attr name="left_menu_view_bg" format="reference" />
         <attr name="right_menu_view_bg" format="reference" />
         <attr name="stroked_buttons_and_links_outline" format="color" />
+		<attr name="simple_widget_background_color" format="reference" />
 
         <attr name="dashboard_divider" format="reference" />
 		<attr name="dashboard_button" format="reference" />
