Simple widgets settings + review fixes

--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -110,9 +110,9 @@
 	<dimen name="chart_marker_vertical_padding">2dp</dimen>
 	<dimen name="track_image_height">96dp</dimen>
 
-	<dimen name="simple_widget_s_height">48dp</dimen>
-	<dimen name="simple_widget_m_height">72dp</dimen>
-	<dimen name="simple_widget_l_height">96dp</dimen>
+	<dimen name="simple_widget_small_height">48dp</dimen>
+	<dimen name="simple_widget_medium_height">72dp</dimen>
+	<dimen name="simple_widget_large_height">96dp</dimen>
 
 	<dimen name="dashboard_parking_left_margin">16dp</dimen>
 	<dimen name="dashboard_parking_icon_size">48dp</dimen>
@@ -234,9 +234,9 @@
 	<dimen name="default_desc_line_height">20sp</dimen>
 	<dimen name="small_desc_line_height">14sp</dimen>
 
-	<dimen name="simple_widget_value_s_size">24sp</dimen>
-	<dimen name="simple_widget_value_m_size">36sp</dimen>
-	<dimen name="simple_widget_value_l_size">60sp</dimen>
+	<dimen name="simple_widget_value_small_size">24sp</dimen>
+	<dimen name="simple_widget_value_medium_size">36sp</dimen>
+	<dimen name="simple_widget_value_large_size">60sp</dimen>
 
 	<dimen name="default_split_segments_overview">13sp</dimen>
 	<dimen name="default_split_segments_data">13sp</dimen>
