#2159: Implemented smart folders (https://github.com/osmandapp/OsmAnd-Issues/issues/2159)

--- a/OsmAnd/res/values/attrs.xml
+++ b/OsmAnd/res/values/attrs.xml
@@ -175,6 +175,7 @@
 	    <attr name="icon_color_active" format="reference" />
 	    <attr name="toolbar_active_color" format="reference" />
 	    <attr name="status_bar_active_color" format="reference" />
+	    <attr name="alert_dialog_theme" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="PagerSlidingTabStrip">
