--- a/OsmAnd/res/layout/fragment_track_filters.xml
+++ b/OsmAnd/res/layout/fragment_track_filters.xml
@@ -28,17 +28,27 @@
 				android:layout_width="@dimen/toolbar_height"
 				android:layout_height="@dimen/toolbar_height"
 				android:contentDescription="@string/access_shared_string_navigate_up"
-				android:tint="?attr/default_icon_color"
-				osmand:srcCompat="@drawable/ic_arrow_back" />
+				osmand:srcCompat="@drawable/ic_arrow_back"
+				osmand:tint="?attr/default_icon_color" />
 
 			<net.osmand.plus.widgets.TextViewEx
-				android:layout_width="match_parent"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
+				android:layout_weight="1"
 				android:gravity="center_vertical"
 				android:padding="@dimen/content_padding"
 				android:text="@string/filter_screen_title"
 				android:textSize="@dimen/dialog_header_text_size"
 				osmand:typeface="@string/font_roboto_medium" />
+
+			<ImageView
+				android:id="@+id/save_filters_btn"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:layout_marginEnd="@dimen/content_padding"
+				android:src="@drawable/ic_action_gsave_dark"
+				osmand:tint="?attr/icon_color_active" />
 
 		</LinearLayout> <!--HEADER-->
 
