--- a/OsmAnd/res/xml/general_profile_settings.xml
+++ b/OsmAnd/res/xml/general_profile_settings.xml
@@ -88,7 +88,7 @@
 		android:title="@string/use_volume_buttons_as_zoom"
 		tools:icon="@drawable/ic_action_zoom_volume_buttons" />
 
-	<net.osmand.plus.settings.preferences.ListPreferenceEx
+	<Preference
 		android:key="external_input_device"
 		android:layout="@layout/preference_with_descr"
 		android:title="@string/external_input_device" />
