--- a/OsmAnd/res/layout/filter_date_item.xml
+++ b/OsmAnd/res/layout/filter_date_item.xml
@@ -12,6 +12,7 @@
 		android:id="@+id/title_container"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackground"
 		android:orientation="horizontal"
 		android:paddingTop="@dimen/content_padding"
 		android:paddingBottom="@dimen/content_padding">
