--- a/OsmAnd/res/layout/list_item_external_input_device_type.xml
+++ b/OsmAnd/res/layout/list_item_external_input_device_type.xml
@@ -18,6 +18,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginHorizontal="@dimen/content_padding"
+			android:layout_marginBottom="1dp"
 			android:layout_gravity="center_vertical"
 			android:background="@null"
 			android:clickable="false"
@@ -27,12 +28,12 @@
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:layout_marginStart="@dimen/content_padding_small"
 			android:orientation="vertical">
 
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="0dp"
-				android:layout_marginStart="@dimen/content_padding"
 				android:layout_weight="1"
 				android:orientation="horizontal">
 
@@ -52,6 +53,7 @@
 					android:id="@+id/overflow_menu"
 					android:layout_width="@dimen/acceptable_touch_radius"
 					android:layout_height="@dimen/acceptable_touch_radius"
+					android:layout_marginEnd="@dimen/list_item_button_padding"
 					android:layout_gravity="center_vertical">
 
 					<androidx.appcompat.widget.AppCompatImageButton
@@ -61,6 +63,8 @@
 						android:layout_gravity="center"
 						android:layout_margin="@dimen/content_padding"
 						android:duplicateParentState="true"
+						android:clickable="false"
+						android:focusable="false"
 						android:tint="?attr/default_icon_color"
 						app:srcCompat="@drawable/ic_overflow_menu_dark" />
 
