--- a/OsmAnd/res/layout/download_activity.xml
+++ b/OsmAnd/res/layout/download_activity.xml
@@ -16,15 +16,30 @@
 			android:layout_height="@dimen/list_item_height"
 			android:background="?attr/colorPrimary" />
 
-		<include layout="@layout/free_version_banner" />
-
-		<include layout="@layout/progress_with_two_texts" />
-
-		<androidx.viewpager.widget.ViewPager
-			android:id="@+id/pager"
+		<FrameLayout
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
-			android:layout_weight="1" />
+			android:layout_weight="1">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical">
+
+				<include layout="@layout/free_version_banner" />
+
+				<include layout="@layout/progress_with_two_texts" />
+
+				<androidx.viewpager.widget.ViewPager
+					android:id="@+id/pager"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent" />
+
+			</LinearLayout>
+
+			<include layout="@layout/card_bottom_divider" />
+
+		</FrameLayout>
 
 	</LinearLayout>
 
