--- a/OsmAnd/res/layout/fragment_track_filters.xml
+++ b/OsmAnd/res/layout/fragment_track_filters.xml
@@ -15,48 +15,44 @@
 		android:layout_weight="1"
 		android:orientation="vertical">
 
-		<LinearLayout
+		<com.google.android.material.appbar.AppBarLayout
+			android:id="@+id/app_bar_layout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="?attr/appbar_and_list_background_color"
-			android:elevation="2dp"
-			android:orientation="horizontal">
+			android:background="?attr/appbar_and_list_background_color">
 
-			<ImageButton
-				android:id="@+id/close_button"
-				style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
-				android:layout_width="@dimen/toolbar_height"
-				android:layout_height="@dimen/toolbar_height"
-				android:contentDescription="@string/access_shared_string_navigate_up"
-				osmand:srcCompat="@drawable/ic_action_close"
-				osmand:tint="?attr/default_icon_color" />
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="@dimen/action_bar_height">
 
-			<net.osmand.plus.widgets.TextViewEx
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="center_vertical"
-				android:padding="@dimen/content_padding"
-				android:text="@string/filter_screen_title"
-				android:textSize="@dimen/dialog_header_text_size"
-				osmand:typeface="@string/font_roboto_medium" />
+				<net.osmand.plus.widgets.TextViewEx
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:gravity="center_vertical"
+					android:padding="@dimen/content_padding"
+					android:text="@string/filter_screen_title"
+					android:textSize="@dimen/dialog_header_text_size"
+					osmand:typeface="@string/font_roboto_medium" />
 
-			<ImageView
-				android:id="@+id/save_filters_btn"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginEnd="@dimen/content_padding"
-				android:src="@drawable/ic_action_gsave_dark"
-				osmand:tint="?attr/icon_color_active" />
+				<ImageView
+					android:id="@+id/save_filters_btn"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center_vertical|end"
+					android:layout_marginEnd="@dimen/content_padding"
+					android:src="@drawable/ic_action_gsave_dark"
+					osmand:tint="?attr/icon_color_active" />
 
-		</LinearLayout> <!--HEADER-->
+			</androidx.appcompat.widget.Toolbar>
+
+		</com.google.android.material.appbar.AppBarLayout>
 
 		<androidx.recyclerview.widget.RecyclerView
 			android:id="@+id/filters_list"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_weight="1" />
+			android:layout_height="match_parent" />
 
 	</LinearLayout>
 
