--- a/OsmAnd/res/xml/development_settings.xml
+++ b/OsmAnd/res/xml/development_settings.xml
@@ -56,9 +56,9 @@
 
 	<net.osmand.plus.settings.preferences.SwitchPreferenceEx
 		android:key="use_hh_routing"
-		android:layout="@layout/preference_with_descr"
-		android:summaryOff="@string/shared_string_no"
-		android:summaryOn="@string/shared_string_yes"
+		android:layout="@layout/preference_with_descr_dialog_and_switch"
+		android:summaryOff="@string/shared_string_disabled"
+		android:summaryOn="@string/shared_string_enabled"
 		android:title="@string/special_routing_type" />
 
 	<PreferenceCategory
