--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5202,4 +5202,8 @@
 
 	<string name="poi_checkpoint_cycling">Cycling checkpoint</string>
 
+	<string name="poi_emergency_bay">Emergency bay</string>
+
+	<string name="poi_dressing_room">Dressing room</string>
+
 </resources>
