--- a/OsmAnd/res/layout/fragment_track_filters.xml
+++ b/OsmAnd/res/layout/fragment_track_filters.xml
@@ -19,33 +19,13 @@
 			android:id="@+id/app_bar_layout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:background="?attr/appbar_and_list_background_color">
+			android:background="?attr/appbar_and_list_background_color"
+			android:elevation="5dp">
 
 			<androidx.appcompat.widget.Toolbar
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/action_bar_height">
-
-				<net.osmand.plus.widgets.TextViewEx
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:gravity="center_vertical"
-					android:padding="@dimen/content_padding"
-					android:text="@string/filter_screen_title"
-					android:textSize="@dimen/dialog_header_text_size"
-					osmand:typeface="@string/font_roboto_medium" />
-
-				<ImageView
-					android:id="@+id/save_filters_btn"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical|end"
-					android:layout_marginEnd="@dimen/content_padding"
-					android:src="@drawable/ic_action_gsave_dark"
-					osmand:tint="?attr/icon_color_active" />
-
-			</androidx.appcompat.widget.Toolbar>
+				android:layout_height="@dimen/action_bar_height" />
 
 		</com.google.android.material.appbar.AppBarLayout>
 
