--- a/OsmAnd/res/layout-land/map_hud_top.xml
+++ b/OsmAnd/res/layout-land/map_hud_top.xml
@@ -6,12 +6,12 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<!-- Container for top widgets: Coordinates, Map markers bar, Street name, Lanes -->
-	<LinearLayout
+	<net.osmand.plus.views.controls.VerticalWidgetPanel
 		android:id="@+id/top_widgets_panel"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical" />
+		android:orientation="vertical"
+		osmand:topPanel="true"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
