--- a/OsmAnd/res/layout/configure_screen_widget_item.xml
+++ b/OsmAnd/res/layout/configure_screen_widget_item.xml
@@ -11,14 +11,25 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		android:paddingStart="@dimen/content_padding">
+
+		<TextView
+			android:id="@+id/row_id"
+			android:layout_width="24dp"
+			android:layout_height="24dp"
+			android:lineSpacingExtra="5sp"
+			android:textSize="16sp"
+			android:textColor="?android:textColorSecondary"
+			android:layout_gravity="center_vertical"
+			android:visibility="gone"/>
 
 		<androidx.appcompat.widget.AppCompatImageView
 			android:id="@+id/icon"
 			android:layout_width="@dimen/standard_icon_size"
 			android:layout_height="@dimen/standard_icon_size"
 			android:layout_gravity="center_vertical"
-			android:layout_marginHorizontal="@dimen/content_padding"
+			android:layout_marginEnd="@dimen/content_padding"
 			tools:src="@drawable/ic_action_info_dark" />
 
 		<LinearLayout
