--- a/OsmAnd/res/layout/main.xml
+++ b/OsmAnd/res/layout/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -74,11 +75,12 @@
 
 		</FrameLayout>
 
-		<LinearLayout
+		<net.osmand.plus.views.controls.VerticalWidgetPanel
 			android:id="@+id/map_bottom_widgets_panel"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical" />
+			android:orientation="vertical"
+			app:topPanel="false"/>
 
 	</LinearLayout>
 
