--- a/OsmAnd/res/layout/simple_widget_settings.xml
+++ b/OsmAnd/res/layout/simple_widget_settings.xml
@@ -9,8 +9,8 @@
 			android:id="@+id/widget_size_container"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginHorizontal="@dimen/content_padding"
-			android:layout_marginVertical="@dimen/content_padding_small"
+			android:paddingHorizontal="@dimen/content_padding"
+			android:paddingVertical="@dimen/content_padding_small"
 			android:orientation="vertical">
 
 			<net.osmand.plus.widgets.TextViewEx
