--- a/OsmAnd/res/layout/card_cloud_backup_storage.xml
+++ b/OsmAnd/res/layout/card_cloud_backup_storage.xml
@@ -19,39 +19,12 @@
 			android:ellipsize="end"
 			android:gravity="center_vertical|start"
 			android:paddingHorizontal="@dimen/content_padding"
-			android:text="@string/shared_string_storage"
+			android:text="@string/help_article_personal_storage_name"
 			android:textColor="?android:textColorPrimary" />
 
-		<LinearLayout
+		<include
 			android:id="@+id/trash_button"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="?attr/selectableItemBackground"
-			android:gravity="center_vertical"
-			android:minHeight="@dimen/bottom_sheet_list_item_height"
-			android:paddingHorizontal="@dimen/content_padding"
-			android:paddingVertical="@dimen/content_padding_half">
-
-			<androidx.appcompat.widget.AppCompatImageView
-				android:layout_width="@dimen/standard_icon_size"
-				android:layout_height="@dimen/standard_icon_size"
-				android:layout_gravity="center_vertical"
-				android:layout_marginEnd="@dimen/bottom_sheet_icon_margin_large"
-				android:tint="?attr/default_icon_color"
-				android:src="@drawable/ic_action_delete_dark" />
-
-			<net.osmand.plus.widgets.TextViewEx
-				style="@style/TitleStyle"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_weight="1"
-				android:ellipsize="end"
-				android:textAppearance="@style/TextAppearance.ListItemTitle"
-				android:textColor="?android:attr/textColorPrimary"
-				android:text="@string/shared_string_trash" />
-
-		</LinearLayout>
+			layout="@layout/preference_button_end_text" />
 
 	</LinearLayout>
 
