--- a/OsmAnd/res/layout/card_cloud_trash_empty_banner.xml
+++ b/OsmAnd/res/layout/card_cloud_trash_empty_banner.xml
@@ -30,6 +30,7 @@
 
 		<net.osmand.plus.widgets.TextViewEx
 			style="@style/DescStyle"
+			android:id="@+id/description"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
