--- a/OsmAnd/res/layout/card_trash_alert.xml
+++ b/OsmAnd/res/layout/card_trash_alert.xml
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="?attr/list_background_color"
-	android:paddingHorizontal="@dimen/content_padding"
-	android:orientation="horizontal">
-
-	<androidx.appcompat.widget.AppCompatImageView
-		android:layout_width="@dimen/standard_icon_size"
-		android:layout_height="@dimen/standard_icon_size"
-		android:tint="?attr/default_icon_color"
-		android:layout_marginTop="@dimen/content_padding"
-		app:srcCompat="@drawable/ic_action_delete_outlined"
-		android:layout_marginEnd="@dimen/content_padding"/>
+	android:orientation="vertical">
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingVertical="@dimen/content_padding"
-		android:layout_marginStart="@dimen/content_padding"
-		android:orientation="vertical">
+		android:background="?attr/list_background_color"
+		android:orientation="horizontal"
+		android:paddingHorizontal="@dimen/content_padding">
 
-		<net.osmand.plus.widgets.TextViewEx
-			style="@style/TitleStyle"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/trash_alert_card_desc"
-			android:textColor="?android:textColorPrimary" />
+		<androidx.appcompat.widget.AppCompatImageView
+			android:layout_width="@dimen/standard_icon_size"
+			android:layout_height="@dimen/standard_icon_size"
+			android:layout_marginTop="@dimen/content_padding"
+			android:layout_marginEnd="@dimen/content_padding"
+			android:tint="?attr/default_icon_color"
+			app:srcCompat="@drawable/ic_action_delete_outlined" />
 
-		<net.osmand.plus.widgets.dialogbutton.DialogButton
-			android:id="@+id/action_button"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginEnd="@dimen/content_padding_small"
-			app:dialogButtonTopMargin="@dimen/content_padding"
-			app:dialogButtonType="secondary"
-			app:dialogButtonTitle="@string/shared_string_empty_trash"/>
+			android:layout_marginStart="@dimen/content_padding"
+			android:orientation="vertical"
+			android:paddingVertical="@dimen/content_padding">
+
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/title"
+				style="@style/TitleStyle"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textColor="?android:textColorPrimary"
+				tools:text="@string/trash_alert_card_desc" />
+
+			<net.osmand.plus.widgets.dialogbutton.DialogButton
+				android:id="@+id/action_button"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginEnd="@dimen/content_padding_small"
+				app:dialogButtonTitle="@string/shared_string_empty_trash"
+				app:dialogButtonTopMargin="@dimen/content_padding"
+				app:dialogButtonType="secondary" />
+
+		</LinearLayout>
 
 	</LinearLayout>
+
+	<include layout="@layout/list_item_divider" />
 
 </LinearLayout>
