--- a/OsmAnd/res/layout/list_item_trash_item.xml
+++ b/OsmAnd/res/layout/list_item_trash_item.xml
@@ -54,13 +54,13 @@
 					android:orientation="horizontal">
 
 					<androidx.appcompat.widget.AppCompatImageView
-						android:id="@+id/cloud_label"
+						android:id="@+id/cloud_icon"
 						android:layout_width="@dimen/small_icon_size"
 						android:layout_height="@dimen/small_icon_size"
-						android:layout_marginEnd="@dimen/content_padding_half"
 						android:layout_gravity="center_vertical"
-						android:tint="?attr/secondary_icon_color"
-						android:src="@drawable/ic_action_cloud"/>
+						android:layout_marginEnd="@dimen/content_padding_half"
+						android:src="@drawable/ic_action_cloud"
+						android:tint="?attr/secondary_icon_color" />
 
 					<net.osmand.plus.widgets.TextViewEx
 						android:id="@+id/description"
@@ -77,6 +77,28 @@
 
 			</LinearLayout>
 
+			<androidx.appcompat.widget.AppCompatImageView
+				android:id="@+id/second_icon"
+				android:layout_width="@dimen/standard_icon_size"
+				android:layout_height="@dimen/standard_icon_size"
+				android:layout_gravity="center_vertical"
+				android:layout_marginLeft="@dimen/content_padding"
+				android:layout_marginRight="@dimen/content_padding"
+				osmand:srcCompat="@drawable/ic_overflow_menu_white" />
+
+			<me.zhanghai.android.materialprogressbar.MaterialProgressBar
+				android:id="@+id/progress_bar"
+				style="@style/Widget.MaterialProgressBar.ProgressBar.NoPadding"
+				android:layout_width="@dimen/acceptable_touch_radius"
+				android:layout_height="@dimen/acceptable_touch_radius"
+				android:layout_gravity="center_vertical"
+				android:layout_marginLeft="@dimen/text_margin_small"
+				android:layout_marginRight="@dimen/text_margin_small"
+				android:indeterminate="false"
+				osmand:mpb_progressStyle="circular"
+				osmand:mpb_setBothDrawables="true"
+				osmand:mpb_useIntrinsicPadding="false" />
+
 		</LinearLayout>
 
 		<include
@@ -84,5 +106,9 @@
 			layout="@layout/divider_half_item_with_background" />
 
 	</LinearLayout>
+
+	<include
+		android:id="@+id/bottom_shadow"
+		layout="@layout/card_bottom_divider" />
 
 </LinearLayout>
