Cloud trash fixes

--- a/OsmAnd/res/layout/card_cloud_backup_storage.xml
+++ b/OsmAnd/res/layout/card_cloud_backup_storage.xml
@@ -4,7 +4,9 @@
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
 
-	<include layout="@layout/list_item_divider" />
+	<include
+		android:id="@+id/divider_top"
+		layout="@layout/list_item_divider" />
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -24,10 +26,12 @@
 
 		<include
 			android:id="@+id/trash_button"
-			layout="@layout/preference_button_end_text" />
+			layout="@layout/button_with_pro_banner" />
 
 	</LinearLayout>
 
-	<include layout="@layout/card_bottom_divider" />
+	<include
+		android:id="@+id/divider_bottom"
+		layout="@layout/card_bottom_divider" />
 
 </LinearLayout>
