--- a/OsmAnd/res/layout/fragment_osmand_cloud_trash.xml
+++ b/OsmAnd/res/layout/fragment_osmand_cloud_trash.xml
@@ -28,6 +28,7 @@
 			android:layout_height="match_parent"
 			android:clipToPadding="false"
 			android:orientation="vertical"
+			android:paddingBottom="@dimen/bottom_sheet_title_height"
 			android:scrollbars="none" />
 
 		<me.zhanghai.android.materialprogressbar.MaterialProgressBar
