--- a/OsmAnd/res/layout/map_hud_bottom.xml
+++ b/OsmAnd/res/layout/map_hud_bottom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
@@ -214,5 +215,12 @@
             android:layout_height="match_parent"/>
 
     </FrameLayout>
+
+	<net.osmand.plus.views.controls.VerticalWidgetPanel
+		android:id="@+id/map_bottom_widgets_panel"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		app:topPanel="false"/>
 
 </LinearLayout>
