--- a/OsmAnd/res/layout/vertical_divider.xml
+++ b/OsmAnd/res/layout/vertical_divider.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/right_divider"
+	android:id="@+id/vertical_divider"
 	android:layout_width="1dp"
 	android:layout_height="match_parent"
-	android:background="@drawable/divider">
-
-</FrameLayout>
+	android:background="?attr/divider_color_basic"/>
