--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -4635,7 +4635,7 @@
 	<string name="poi_beauty_salon_pedicure">Pedicure</string>
 	<string name="poi_massage_chiropractic">Chiropractic</string>
 	<string name="poi_massage_shiatsu">Shiatsu</string>
-	<string name="poi_agrarian_yes">Yes;Argarian</string>
+	<string name="poi_agrarian_yes">Yes;Agrarian</string>
 	<string name="poi_agrarian_pesticide">Pesticide</string>
 	<string name="poi_agrarian_fertilizer">Fertilizer</string>
 	<string name="poi_agrarian_seed">Seed</string>
