--- a/OsmAnd/res/layout/fragment_select_key_code.xml
+++ b/OsmAnd/res/layout/fragment_select_key_code.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="?attr/activity_background_color"
@@ -130,11 +131,10 @@
 									android:layout_gravity="center"
 									android:layout_marginHorizontal="@dimen/title_padding"
 									android:layout_marginVertical="@dimen/content_padding"
-									android:layout_weight="1"
 									android:ellipsize="end"
-									android:text="None"
 									android:textColor="?android:textColorPrimary"
-									android:textSize="@dimen/key_event_keycode_label_size" />
+									android:textSize="@dimen/key_event_keycode_label_size"
+									tools:text="None" />
 
 							</FrameLayout>
 
