--- a/OsmAnd/res/layout/list_item_external_input_device_keybinding_item.xml
+++ b/OsmAnd/res/layout/list_item_external_input_device_keybinding_item.xml
@@ -7,18 +7,12 @@
 	android:gravity="center_vertical">
 
 	<LinearLayout
-		android:id="@+id/selectable_list_item"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:minHeight="@dimen/bottom_sheet_selected_item_title_height">
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_marginStart="@dimen/content_padding"
-			android:orientation="vertical">
+		android:layout_height="@dimen/bottom_sheet_selected_item_title_height"
+		android:orientation="vertical">
 
 			<LinearLayout
+				android:id="@+id/selectable_list_item"
 				android:layout_width="match_parent"
 				android:layout_height="0dp"
 				android:layout_weight="1"
@@ -30,6 +24,7 @@
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical"
+					android:layout_marginStart="@dimen/content_padding"
 					android:layout_marginEnd="@dimen/content_padding"
 					android:layout_weight="1"
 					android:ellipsize="end"
@@ -54,9 +49,8 @@
 				android:id="@+id/bottom_divider"
 				android:layout_width="match_parent"
 				android:layout_height="1dp"
+				android:layout_marginStart="@dimen/content_padding"
 				android:background="?attr/divider_color_basic" />
-
-		</LinearLayout>
 
 	</LinearLayout>
 
