--- a/OsmAnd/res/layout/list_item_external_input_device_type.xml
+++ b/OsmAnd/res/layout/list_item_external_input_device_type.xml
@@ -26,15 +26,15 @@
 			android:saveEnabled="false" />
 
 		<LinearLayout
-			android:layout_width="match_parent"
+			android:layout_width="0dp"
 			android:layout_height="match_parent"
+			android:layout_weight="1"
 			android:layout_marginStart="@dimen/content_padding_small"
 			android:orientation="vertical">
 
 			<LinearLayout
 				android:layout_width="match_parent"
-				android:layout_height="0dp"
-				android:layout_weight="1"
+				android:layout_height="match_parent"
 				android:orientation="horizontal">
 
 				<net.osmand.plus.widgets.TextViewEx
@@ -76,6 +76,7 @@
 				android:id="@+id/bottom_divider"
 				android:layout_width="match_parent"
 				android:layout_height="1dp"
+				android:layout_marginTop="-1dp"
 				android:background="?attr/divider_color_basic" />
 
 		</LinearLayout>
