--- a/OsmAnd/res/layout/list_item_with_right_text_56dp.xml
+++ b/OsmAnd/res/layout/list_item_with_right_text_56dp.xml
@@ -7,55 +7,50 @@
 	android:gravity="center_vertical">
 
 	<LinearLayout
-		android:id="@+id/selectable_list_item"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:minHeight="@dimen/bottom_sheet_selected_item_title_height">
+		android:minHeight="@dimen/bottom_sheet_selected_item_title_height"
+		android:orientation="vertical">
 
 		<LinearLayout
+			android:id="@+id/selectable_list_item"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_marginStart="@dimen/content_padding"
-			android:orientation="vertical">
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:paddingStart="@dimen/content_padding"
+			android:orientation="horizontal">
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="0dp"
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/title"
+				style="@style/TitleStyle"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:layout_marginEnd="@dimen/content_padding"
 				android:layout_weight="1"
-				android:orientation="horizontal">
+				android:ellipsize="end"
+				android:textColor="?android:textColorPrimary"
+				tools:text="Example of title" />
 
-				<net.osmand.plus.widgets.TextViewEx
-					android:id="@+id/title"
-					style="@style/TitleStyle"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:layout_marginEnd="@dimen/content_padding"
-					android:layout_weight="1"
-					android:ellipsize="end"
-					android:textColor="?android:textColorPrimary"
-					tools:text="Example of title" />
-
-				<net.osmand.plus.widgets.TextViewEx
-					android:id="@+id/description"
-					style="@style/TitleStyle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:layout_marginEnd="@dimen/content_padding"
-					android:ellipsize="end"
-					android:textColor="?android:textColorSecondary"
-					tools:text="Summary" />
-
-			</LinearLayout>
-
-			<View
-				android:id="@+id/bottom_divider"
-				android:layout_width="match_parent"
-				android:layout_height="1dp"
-				android:background="?attr/divider_color_basic" />
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/description"
+				style="@style/TitleStyle"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:layout_marginEnd="@dimen/content_padding"
+				android:ellipsize="end"
+				android:textColor="?android:textColorSecondary"
+				tools:text="Summary" />
 
 		</LinearLayout>
+
+		<View
+			android:id="@+id/bottom_divider"
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:layout_marginStart="@dimen/content_padding"
+			android:background="?attr/divider_color_basic" />
 
 	</LinearLayout>
 
