--- a/OsmAnd/res/layout/preference_with_descr_and_divider.xml
+++ b/OsmAnd/res/layout/preference_with_descr_and_divider.xml
@@ -12,6 +12,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minHeight="@dimen/setting_list_item_large_height"
+		android:orientation="horizontal"
 		tools:background="?android:attr/selectableItemBackground">
 
 		<androidx.appcompat.widget.AppCompatImageView
@@ -29,12 +30,9 @@
 			tools:tint="@color/active_color_primary_light" />
 
 		<LinearLayout
-			android:layout_width="0dp"
+			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="vertical"
-			android:paddingStart="@dimen/content_padding"
-			android:paddingEnd="@dimen/content_padding">
+			android:orientation="vertical">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -42,6 +40,8 @@
 				android:layout_gravity="center_vertical"
 				android:layout_marginTop="@dimen/content_padding_small"
 				android:layout_marginBottom="@dimen/content_padding_small"
+				android:paddingStart="@dimen/content_padding"
+				android:paddingEnd="@dimen/content_padding"
 				android:orientation="vertical">
 
 				<net.osmand.plus.widgets.TextViewEx
@@ -70,18 +70,18 @@
 
 			</LinearLayout>
 
-			<FrameLayout
+			<View
 				android:layout_width="match_parent"
 				android:layout_height="0dp"
-				android:layout_weight="1">
+				android:layout_weight="1"/>
 
-				<View
-					android:layout_width="match_parent"
-					android:layout_height="1dp"
-					android:layout_gravity="bottom"
-					android:background="?attr/divider_color_basic" />
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:layout_gravity="bottom"
+				android:layout_marginStart="@dimen/content_padding"
+				android:background="?attr/divider_color_basic" />
 
-			</FrameLayout>
 
 		</LinearLayout>
 
