Implement CollapsingToolbarLayout in appropriate places

--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -386,6 +386,7 @@
 
 	<dimen name="toolbar_height">56dp</dimen>
 	<dimen name="toolbar_height_expanded">96dp</dimen>
+	<dimen name="toolbar_height_expanded_large">112dp</dimen>
 	<dimen name="toolbar_inset_start_with_navigation">72dp</dimen>
 	<dimen name="toolbar_inset_start">54dp</dimen>
 	<dimen name="toolbar_title_padding_top">7dp</dimen>
