--- a/OsmAnd/res/layout/fragment_select_key_code.xml
+++ b/OsmAnd/res/layout/fragment_select_key_code.xml
@@ -1,70 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="?attr/activity_background_color"
 	android:clickable="true"
-	android:focusable="true"
-	android:orientation="vertical">
-
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="?attr/list_background_color"
-		android:orientation="vertical">
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center_vertical"
-			android:minHeight="@dimen/action_bar_height"
-			android:orientation="horizontal">
-
-			<androidx.appcompat.widget.AppCompatImageButton
-				android:id="@+id/close_button"
-				style="@style/Widget.AppCompat.ActionButton"
-				android:layout_width="@dimen/dialog_content_margin"
-				android:layout_height="@dimen/dialog_content_margin"
-				android:layout_marginStart="@dimen/title_padding"
-				android:contentDescription="@string/shared_string_close"
-				android:src="@drawable/ic_action_close"
-				android:tint="?attr/primary_icon_color" />
-
-		</LinearLayout>
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginHorizontal="@dimen/content_padding"
-			android:gravity="center_vertical"
-			android:minHeight="@dimen/setting_list_item_large_height"
-			android:orientation="horizontal">
-
-			<net.osmand.plus.widgets.TextViewEx
-				style="@style/TitleStyle.Medium"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:ellipsize="end"
-				android:maxLines="1"
-				android:text="@string/shared_string_button"
-				android:textColor="?android:textColorPrimary"
-				android:textSize="@dimen/dialog_header_text_size" />
-
-		</LinearLayout>
-
-	</LinearLayout>
+	android:focusable="true">
 
 	<FrameLayout
 		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1">
+		android:layout_height="match_parent"
+		osmand:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-		<ScrollView
+		<androidx.core.widget.NestedScrollView
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:fillViewport="true">
+			android:fillViewport="true"
+			android:overScrollMode="never">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -209,7 +162,7 @@
 
 			</LinearLayout>
 
-		</ScrollView>
+		</androidx.core.widget.NestedScrollView>
 
 		<androidx.appcompat.widget.AppCompatImageView
 			android:layout_width="match_parent"
@@ -230,10 +183,48 @@
 	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_gravity="bottom"
 		android:background="?attr/list_background_color">
 
 		<include layout="@layout/bottom_buttons" />
 
 	</FrameLayout>
 
-</LinearLayout>
+	<com.google.android.material.appbar.AppBarLayout
+		android:id="@+id/appbar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@android:color/transparent"
+		android:stateListAnimator="@animator/appbar_always_elevated">
+
+		<com.google.android.material.appbar.CollapsingToolbarLayout
+			android:id="@+id/toolbar_layout"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/toolbar_height_expanded_large"
+			android:background="?attr/list_background_color"
+			osmand:collapsedTitleTextAppearance="@style/AppBarTitlePrimary"
+			osmand:expandedTitleGravity="start|bottom"
+			osmand:expandedTitleMarginBottom="@dimen/content_padding"
+			osmand:expandedTitleMarginEnd="@dimen/content_padding"
+			osmand:expandedTitleMarginStart="@dimen/content_padding"
+			osmand:expandedTitleTextAppearance="@style/AppBarTitlePrimary"
+			osmand:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="@dimen/toolbar_height"
+				android:minHeight="@dimen/setting_list_item_large_height"
+				osmand:layout_collapseMode="pin"
+				osmand:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
+				osmand:title="@string/shared_string_button"
+				osmand:titleMarginEnd="0dp"
+				osmand:titleMarginStart="0dp">
+
+			</androidx.appcompat.widget.Toolbar>
+
+		</com.google.android.material.appbar.CollapsingToolbarLayout>
+
+	</com.google.android.material.appbar.AppBarLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
