Add bottom widget panel to land layout

--- a/OsmAnd/res/layout-land/map_hud_bottom.xml
+++ b/OsmAnd/res/layout-land/map_hud_bottom.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:osmand="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="bottom"
     android:orientation="vertical">
 
@@ -273,5 +274,12 @@
         android:id="@+id/bottomFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <net.osmand.plus.views.controls.VerticalWidgetPanel
+        android:id="@+id/map_bottom_widgets_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:topPanel="false"/>
 
 </LinearLayout>
