--- a/OsmAnd/res/layout/street_name_widget.xml
+++ b/OsmAnd/res/layout/street_name_widget.xml
@@ -37,14 +37,13 @@
 			android:scaleType="fitCenter"
 			android:visibility="gone" />
 
-		<LinearLayout
-			android:id="@+id/map_shields_container"
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:layout_gravity="center"
-			android:gravity="center"
-			android:orientation="horizontal">
-		</LinearLayout>
+		<androidx.appcompat.widget.AppCompatImageView
+			android:id="@+id/map_shield_icon"
+			android:layout_width="@dimen/map_widget_height"
+			android:layout_height="@dimen/map_widget_height"
+			android:scaleType="fitCenter"
+			android:visibility="gone"
+			tools:src="@drawable/h_white_pillow_2_road_shield" />
 
 		<FrameLayout
 			android:layout_width="wrap_content"
