Cloud trash fixes

--- a/OsmAnd/res/layout/list_item_trash_item.xml
+++ b/OsmAnd/res/layout/list_item_trash_item.xml
@@ -24,6 +24,7 @@
 				android:layout_gravity="center_vertical"
 				android:layout_marginLeft="@dimen/content_padding"
 				android:layout_marginRight="@dimen/content_padding"
+				android:tint="?attr/secondary_icon_color"
 				tools:srcCompat="@drawable/ic_map" />
 
 			<LinearLayout
