--- a/OsmAnd/res/layout/track_filter_checkbox_item.xml
+++ b/OsmAnd/res/layout/track_filter_checkbox_item.xml
@@ -15,6 +15,7 @@
 		android:layout_height="@dimen/standard_icon_size"
 		android:layout_gravity="center_vertical"
 		android:layout_marginStart="@dimen/content_padding"
+		android:layout_marginEnd="@dimen/content_padding"
 		android:visibility="gone"
 		tools:src="@drawable/ic_action_track_line_bold_color"
 		tools:tint="?attr/default_icon_color" />
@@ -74,6 +75,7 @@
 				android:layout_marginEnd="@dimen/content_padding"
 				android:gravity="center_vertical"
 				android:textAppearance="@style/TextAppearance.ListItemTitle"
+				android:textColor="?android:textColorSecondary"
 				osmand:typeface="@string/font_roboto_regular"
 				tools:text="Some title" />
 
