--- a/OsmAnd/res/layout-v26/simple_map_widget_small.xml
+++ b/OsmAnd/res/layout-v26/simple_map_widget_small.xml
@@ -34,6 +34,10 @@
 			android:letterSpacing="0.04"
 			android:maxLines="1"
 			android:textColor="@color/text_color_primary_light"
+			android:autoSizeMaxTextSize="@dimen/simple_widget_value_small_size"
+			android:autoSizeMinTextSize="@dimen/simple_widget_value_minimum_size"
+			android:autoSizeStepGranularity="2sp"
+			android:autoSizeTextType="uniform"
 			android:textSize="@dimen/simple_widget_value_small_size"
 			osmand:layout_constraintBottom_toBottomOf="parent"
 			osmand:layout_constraintEnd_toEndOf="parent"
