--- a/OsmAnd/res/layout-v26/simple_map_widget_large.xml
+++ b/OsmAnd/res/layout-v26/simple_map_widget_large.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/widget_bg"
@@ -10,45 +11,54 @@
 	<LinearLayout
 		android:id="@+id/container"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
 		android:orientation="vertical"
 		android:paddingHorizontal="16dp"
 		android:paddingVertical="10dp">
 
-		<LinearLayout
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
+			android:layout_height="wrap_content">
 
 			<TextView
 				android:id="@+id/widget_name"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="start"
+				android:layout_marginEnd="8dp"
+				android:ellipsize="end"
 				android:letterSpacing="0.06"
 				android:lineSpacingExtra="-2sp"
 				android:maxLines="1"
 				android:textAllCaps="true"
 				android:textColor="@color/text_color_secondary_light"
 				android:textSize="@dimen/simple_widget_description_text_size"
+
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toStartOf="@+id/widget_text_small"
+				app:layout_constraintHorizontal_bias="0.0"
+				app:layout_constraintHorizontal_chainStyle="packed"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constrainedWidth="true"
 				tools:text="Widget name" />
 
 			<TextView
 				android:id="@+id/widget_text_small"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:gravity="end"
 				android:letterSpacing="0.06"
 				android:lineSpacingExtra="-2sp"
 				android:maxLines="1"
 				android:textAllCaps="true"
 				android:textColor="@color/text_color_secondary_light"
 				android:textSize="@dimen/simple_widget_description_text_size"
+
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
 				tools:text="Unit" />
 
-		</LinearLayout>
+		</androidx.constraintlayout.widget.ConstraintLayout>
 
 		<FrameLayout
 			android:layout_width="match_parent"
@@ -65,13 +75,15 @@
 			<TextView
 				android:id="@+id/widget_text"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:layout_height="match_parent"
 				android:layout_gravity="center"
 				android:layout_marginHorizontal="36dp"
 				android:autoSizeMaxTextSize="@dimen/simple_widget_value_large_size"
-				android:autoSizeMinTextSize="@dimen/simple_widget_value_small_size"
+				android:autoSizeMinTextSize="@dimen/simple_widget_value_minimum_size"
 				android:autoSizeStepGranularity="2sp"
 				android:autoSizeTextType="uniform"
+				android:ellipsize="none"
+				android:gravity="center"
 				android:letterSpacing="0.04"
 				android:maxLines="1"
 				android:textColor="@color/text_color_primary_light"
