--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -238,6 +238,7 @@
 	<dimen name="key_event_cursor_width">4dp</dimen> <!--2dp-->
 	<dimen name="key_event_cursor_corners_radius">4dp</dimen> <!--4dp-->
 
+	<dimen name="simple_widget_value_minimum_size">16sp</dimen>
 	<dimen name="simple_widget_value_small_size">24sp</dimen>
 	<dimen name="simple_widget_value_medium_size">36sp</dimen>
 	<dimen name="simple_widget_value_large_size">60sp</dimen>
