--- a/OsmAnd/res/layout/configure_screen_list_item_add_page.xml
+++ b/OsmAnd/res/layout/configure_screen_list_item_add_page.xml
@@ -28,6 +28,7 @@
 
 		<net.osmand.plus.widgets.TextViewEx
 			style="@style/TitleStyle.Medium"
+			android:id="@+id/add_page"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="@dimen/dialog_button_height"
